# gpsCalibration

./: AUTHORS  CONTRIBUTING.md  FUNCTIONREQUESTS.md  README.md  functionRequests.md  globalConfig.py  install_full.py  install_mini.py  install_mini.sh  projectPlan.doc  run.py  setup.sh
data/: bag_list.txt
src/: CMakeLists.txt  package.xml
src/gps_process/: CMakeLists.txt  README.md
src/gps_process/config/: kml_config.xml
src/gps_process/include/: Gaussion_transform.h  UTM_transform.h  WGS84_parameter.h  color.h  interpolation_by_time.h  parse_config.h
src/gps_process/src/: GPS_to_local.cpp  create_KML.cpp  local_to_GPS.cpp
src/icp_weight_coe/: CMakeLists.txt
src/icp_weight_coe/src/: CMakeLists.txt  README.md
src/icp_weight_coe/src/icp_weight_coe/: CMakeLists.txt  package.xml
src/icp_weight_coe/src/icp_weight_coe/launch/: icp_weight_coe.launch
src/icp_weight_coe/src/icp_weight_coe/src/: icp_weight_coe.cpp
src/lidar_slam/: CMakeLists.txt  README.md
src/lidar_slam/src/: CMakeLists.txt
src/lidar_slam/src/input_data/: CMakeLists.txt  README.md  package.xml
src/lidar_slam/src/loam/: CMakeLists.txt  package.xml
src/long_distance_track_process/: README.md
src/long_distance_track_process/src/: CMakeLists.txt
src/long_distance_track_process/src/long_distance_track_process/: CMakeLists.txt  package.xml
src/msg/: IMLocalXYZT.msg  IMTrack.msg
src/short_distance_track_process/: CMakeLists.txt  README.md
src/short_distance_track_process/src/: .rosinstall  CMakeLists.txt
src/short_distance_track_process/src/data_preprocess/: CMakeLists.txt  package.xml
src/short_distance_track_process/src/results_merge/: CMakeLists.txt  package.xml
src/short_distance_track_process/src/short_distance_track_icp/: CMakeLists.txt  README.md  package.xml
src/track_icp/: CMakeLists.txt  README.md  package.xml
src/track_icp/launch/: track_icp.launch
src/track_icp/src/: track_icp.cpp
(+27 files in other folders)
